# letrista

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  improve.rst  index.rst  installation.rst  make.bat  markup.rst  usage.rst
letrista/: __init__.py  borrador.py  bridge.py  chorus.py  cli.py  draft.py  editable_line.py  instruction.py  intro.py  line.py  linea.py  outro.py  postchorus.py  prechorus.py  seccion.py  section.py  title.py  unassigned_section.py  verse.py
test/: test_linea.py
tests/: __init__.py  test_chorus.py  test_draft.py  test_editable_line.py  test_instruction.py  test_letrista.py  test_line.py  test_section.py  test_title.py  test_unassigned_section.py
tests/example_drafts/: all_sections.e37  all_sections.me37  chorus2r_not_present.e37  chorus3r_not_present.e37  chorus_bridge.e37  chorus_r.e37  chorus_r.me37  chorusr_then_2r.e37  chorusr_then_2r.me37  empty_sections.e37  incomplete_section.e37  intro_verse.e37  no_chorus_r.e37  no_chorus_r.me37  whitespace.e37
